--- a/ZeldaTearsOfTheKingdome.html
+++ b/ZeldaTearsOfTheKingdome.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Def Leppard - Hysteria</title>
+		<title>Zelda</title>
 	<style>
 		* {padding: 0; padding: 0;}
     body {
@@ -88,8 +88,6 @@
         width: 200px;
         border: 1px #000000 solid;
     }
-    
-
 		</style>
 	</head>
 	<body>
@@ -130,7 +128,7 @@
 			<p class="path"><a href="index.html">Hasiera</a> &gt; <a href="katalogoa.html">Katalogoa</a> &gt; <a href="Nintendo.html">Nintendo</a> &gt;</p>
 			<h2>The Legend Of Zelda Tears of The Kingdom</h2>
 			<img src="img/001.png" alt="Def Leppard - Hysteria">
-			<p>Nintendo-k garatutako The Legend of Zelda sagako azken jokoa, 2023 urtean argitaratua</p>
+            <p>Nintendo-k garatutako The Legend of Zelda sagako azken jokoa, 2023 urtean argitaratua</p>
 			<p>Antzerako bideojokoak:</p>
 			<ol>
 				<li>The Legend of Zelda</li>
@@ -149,6 +147,9 @@
 			<p>Egoera: berria
 			<p>Zortzailea: <a href="Nintendo.html">Nintendo</a></p>
 			<p>Salneurria: 69,99 &euro;</p>
+            <a href="saskia.html">
+            <button>Erosi orain</button>
+			<a>
 		</main>
 		<footer>
 			<p>&copy; 2025 Lea Artibai Ikastetxea</p>
