--- a/Eskaria.html
+++ b/Eskaria.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>saskia</title>
+		<title>Eskaria</title>
 		<style>
 	* {padding: 0; padding: 0;}
     * { padding: 0; margin: 0; }
@@ -139,14 +139,21 @@
         gap: 10px;
         align-items: center;
     }
-    table {
-        width: 200px;
     }
+
+    form {
+        border: 1px #000000 solid;
+        width:fit-content;
+        padding: 1.96850393701%;
+    }
+
+    form div {
+    display: grid;
+    grid-template-columns: 110px 1fr;
+    align-items: center;
+    margin-bottom: 2%;
     }
         
-    table {
-        margin: auto;
-    }
 		</style>
 	</head>
 	<body>
@@ -185,53 +192,52 @@
 			</a>
 		</ul>
 	</nav>
-<main>
-	<section>
-    <h1>Saskia</h1>
+		<main>
+		<section>
+    <h1>Eskaria</h1>
 
-    <h2>Produktuak</h2>
+    <h2>Zure datuak</h2>
 
-    <div class="produktuak">
-      <table>
-        <thead>
-          <tr>
-            <th>Produktua</th>
-            <th>Salneurria</th>
-            <th>Kopurua</th>
-            <th>Guztira</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Grand Theft Auto VI</td>
-            <td>199,99&euro</td>
-            <td><input type="number" value="1" min="1"></td>
-            <td>199,99&euro</td>
-            <td><button>Ezabatu</button></td>
-          </tr>
-          <tr>
-            <td>Baldurs Gate 3</td>
-            <td>15,99 &euro</td>
-            <td><input type="number" value="1" min="1"></td>
-            <td>15,99 &euro</td>
-            <td><button>Ezabatu</button></td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <td>Guztira</td>
-            <td>31,98 &euro</td>
-            <td></td>
-          </tr>
-        </tfoot>
-      </table>
-    </div>
+    <form>
+      <div>
+        <label for="izena">Izena:</label>
+        <input type="text" id="izena" name="izena">
+      </div>
 
-    <a href="Eskaria.html">
+      <div>
+        <label for="abizena">Abizena:</label>
+        <input type="text" id="abizena" name="abizena">
+      </div>
+
+      <div>
+        <label for="helbidea">Helbidea:</label>
+        <input type="text" id="helbidea" name="helbidea">
+      </div>
+
+      <div>
+        <label for="herria">Herria:</label>
+        <input type="text" id="herria" name="herria">
+      </div>
+
+      <div>
+        <label for="posta">Posta-kodea:</label>
+        <input type="text" id="posta" name="posta">
+      </div>
+
+      <div>
+        <label for="probintzia">Probintzia:</label>
+        <input type="text" id="probintzia" name="probintzia">
+      </div>
+
+      <div>
+        <label for="emaila">E-maila:</label>
+        <input type="email" id="emaila" name="emaila">
+      </div>
+    <a href="Eskaria2.html">
         <button>Hurrengoa</button>
 	<a>
-  </section>
+    </form>
+    </section>
 </main>
 		<footer>
 			<p>&copy; 2025 Lea Artibai Ikastetxea</p>
