--- a/Eskaria.html
+++ b/Eskaria.html
@@ -233,9 +233,9 @@
         <label for="emaila">E-maila:</label>
         <input type="email" id="emaila" name="emaila">
       </div>
-    <a href="Eskaria2.html">
-        <button>Hurrengoa</button>
-	<a>
+    <a href="Eskaria2.html" style="text-decoration:none;">
+    	<button type="button">Hurrengoa</button>
+	</a>	
     </form>
     </section>
 </main>
@@ -244,4 +244,5 @@
 		</footer>
 	</body>
 </html>
+
 
