--- a/Eskaria2.html
+++ b/Eskaria2.html
@@ -294,9 +294,9 @@
       </table>
     </div>
 
-    <a href="Eskaria3.html">
-        <button>Hurrengoa</button>
-	<a>
+    <a href="Eskaria3.html" style="text-decoration:none;">
+    	<button type="button">Hurrengoa</button>
+	</a>	
     </section>
 </main>
 		<footer>
@@ -304,4 +304,5 @@
 		</footer>
 	</body>
 </html>
+
 
