--- a/Eskaria3.html
+++ b/Eskaria3.html
@@ -234,9 +234,9 @@
     </div>
     </form>
 
-    <a href="Eskaria4.html">
-        <button>Hurrengoa</button>
-	<a>
+    <a href="Eskaria2.html" style="text-decoration:none;">
+    	<button type="button">Hurrengoa</button>
+	</a>	
     </section>
 </main>
 		<footer>
@@ -244,3 +244,4 @@
 		</footer>
 	</body>
 </html>
+
