Fix HTML structure and update button link

--- a/Eskaria4.html
+++ b/Eskaria4.html
@@ -235,9 +235,9 @@
     </div>
     </form>
 
-    <a href="Eskaria4.html">
-        <button>Hurrengoa</button>
-	<a>
+    <a href="Eskaria2.html" style="text-decoration:none;">
+    	<button type="button">Hurrengoa</button>
+	</a>	
     </section>
 </main>
 		<footer>
@@ -245,3 +245,4 @@
 		</footer>
 	</body>
 </html>
+
